--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,70 @@
+// npm i eslint prettier eslint-config-prettier eslint-plugin-prettier eslint-config-airbnb eslint-plugin-node eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-react --save--dev
+// NOTE: Nextjs + TS = @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint-config-next
+// TODO: Some npm modules maybe missing, AJOUTE LES
 {
-  "extends": "next/core-web-vitals"
+    "extends": [
+        "airbnb",
+        "prettier",
+        "plugin:react/recommended",
+        "next",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "plugins": ["prettier", "react", "@typescript-eslint"],
+    "rules": {
+        "prettier/prettier": [
+            "off",
+            {
+                "endOfLine": "auto",
+                "spaced-comment": "never"
+            }
+        ],
+        "endOfLine": "off",
+        "no-console": "warn",
+        "consistent-return": "off",
+        "func-names": "off",
+        "object-shorthand": "off",
+        "no-process-exit": "off",
+        "no-return-await": "off",
+        "no-underscore-dangle": "off",
+        "class-methods-use-this": "off",
+        "prefer-destructuring": ["warn", { "object": true, "array": false }],
+        "prefer-arrow-callback": "off",
+        "no-unused-vars": ["error", { "varsIgnorePattern": "_" }],
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            { "varsIgnorePattern": "_" }
+        ],
+        "spaced-comment": "off",
+        "no-param-reassign": "off",
+        "arrow-body-style": "off",
+        "import/prefer-default-export": "off",
+        "react/jsx-filename-extension": [
+            1,
+            { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
+        ],
+        "global-require": "warn",
+        "react/no-unescaped-entities": "off",
+        "prefer-template": "off",
+        "react/jsx-props-no-spreading": "off",
+        "import/extensions": "off",
+        "import/no-extraneous-dependencies": "off",
+        "css.lint.unknownAtRules": "off",
+        "at-rule-no-unknown": "off",
+        "scss/at-rule-no-unknown": "off",
+        "css-rcurlyexpected": "off",
+        "react/function-component-definition": "off"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2021,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true,
+            "tsx": true
+        }
+    },
+    "env": {
+        "browser": true,
+        "es6": true
+    }
 }
