--- a/package.json
+++ b/package.json
@@ -1,22 +1,47 @@
 {
-  "name": "massylii",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.34",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3",
-    "typescript": "4.4.4"
-  }
+    "name": "massylii",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 1000",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/css": "^11.5.0",
+        "@emotion/react": "^11.5.0",
+        "@emotion/server": "^11.4.0",
+        "@emotion/styled": "^11.3.0",
+        "eslint-config-airbnb": "^19.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.27.0",
+        "next": "12.0.3",
+        "prettier": "^2.4.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "twin.macro": "^2.8.1"
+    },
+    "devDependencies": {
+        "@emotion/babel-plugin": "^11.3.0",
+        "@types/node": "16.11.7",
+        "@types/react": "17.0.34",
+        "@typescript-eslint/eslint-plugin": "^5.3.1",
+        "@typescript-eslint/parser": "^5.3.1",
+        "autoprefixer": "^10.4.0",
+        "eslint": "^7.32.0",
+        "eslint-config-next": "^12.0.3",
+        "postcss": "^8.3.11",
+        "tailwindcss": "^2.2.19",
+        "typescript": "4.4.4"
+    },
+    "babelMacros": {
+        "twin": {
+            "config": "./tailwind.config.js",
+            "preset": "styled-components"
+        }
+    }
 }
