--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
             "@framework": ["framework/shopify"],
             "@framework/*": ["framework/shopify/*"],
             "@components/*": ["components/*"],
-            "@styles/*": ["styles/*"]
+            "@styles/*": ["styles/*"],
+            "@assets/*": ["assets/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
