--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "massylii",
+    "name": "hiempsal",
     "private": true,
     "scripts": {
         "dev": "next dev -p 1000",
@@ -23,6 +23,8 @@
         "prettier": "^2.4.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-icons": "^4.3.1",
+        "react-responsive": "^9.0.0-beta.5",
         "twin.macro": "^2.8.1"
     },
     "devDependencies": {
