--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@emotion/react": "^11.5.0",
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "body-scroll-lock": "^4.0.0-beta.0",
         "eslint-config-airbnb": "^19.0.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.3",
@@ -29,6 +30,7 @@
     },
     "devDependencies": {
         "@emotion/babel-plugin": "^11.3.0",
+        "@types/body-scroll-lock": "^3.1.0",
         "@types/node": "16.11.7",
         "@types/react": "17.0.34",
         "@typescript-eslint/eslint-plugin": "^5.3.1",
