--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.3.0",
         "body-scroll-lock": "^4.0.0-beta.0",
+        "classnames": "^2.3.1",
         "eslint-config-airbnb": "^19.0.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.3",
@@ -39,6 +40,7 @@
         "eslint": "^7.32.0",
         "eslint-config-next": "^12.0.3",
         "postcss": "^8.3.11",
+        "postcss-import": "^14.0.2",
         "tailwindcss": "^2.2.19",
         "typescript": "4.4.4"
     },
