--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
         "react-responsive": "^9.0.0-beta.5",
+        "sass": "^1.45.1",
         "twin.macro": "^2.8.1"
     },
     "devDependencies": {
