--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "devDependencies": {
         "@emotion/babel-plugin": "^11.3.0",
+        "@emotion/eslint-plugin": "^11.7.0",
         "@types/body-scroll-lock": "^3.1.0",
         "@types/node": "16.11.7",
         "@types/react": "17.0.34",
@@ -40,6 +41,7 @@
         "autoprefixer": "^10.4.0",
         "eslint": "^7.32.0",
         "eslint-config-next": "^12.0.3",
+        "eslint-plugin-styled-components-a11y": "0.0.34",
         "postcss": "^8.3.11",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^2.2.19",
