--- a/package.json
+++ b/package.json
@@ -28,19 +28,24 @@
         "react-icons": "^4.3.1",
         "react-responsive": "^9.0.0-beta.5",
         "sass": "^1.45.1",
+        "styled-components": "^5.3.3",
         "twin.macro": "^2.8.1"
     },
     "devDependencies": {
         "@emotion/babel-plugin": "^11.3.0",
         "@emotion/eslint-plugin": "^11.7.0",
+        "@next/eslint-plugin-next": "^12.0.8",
         "@types/body-scroll-lock": "^3.1.0",
         "@types/node": "16.11.7",
         "@types/react": "17.0.34",
+        "@types/styled-components": "^5.1.21",
         "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
         "autoprefixer": "^10.4.0",
+        "babel-plugin-styled-components": "^2.0.2",
         "eslint": "^7.32.0",
         "eslint-config-next": "^12.0.3",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-styled-components-a11y": "0.0.34",
         "postcss": "^8.3.11",
         "postcss-import": "^14.0.2",
