--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.27.0",
+        "keen-slider": "^6.6.3",
         "next": "12.0.3",
         "prettier": "^2.4.1",
         "react": "17.0.2",
