--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
         "react-responsive": "^9.0.0-beta.5",
+        "react-ticker": "^1.3.1",
         "sass": "^1.45.1",
         "styled-components": "^5.3.3",
         "twin.macro": "^2.8.1"
