--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-icons": "^4.3.1",
         "react-responsive": "^9.0.0-beta.5",
         "react-ticker": "^1.3.1",
+        "react-tilt": "^0.1.4",
         "sass": "^1.45.1",
         "styled-components": "^5.3.3",
         "twin.macro": "^2.8.1"
