--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     },
     "dependencies": {
         "@emotion/css": "^11.5.0",
-        "@emotion/react": "^11.5.0",
+        "@emotion/react": "^11.7.1",
         "@emotion/server": "^11.4.0",
-        "@emotion/styled": "^11.3.0",
+        "@emotion/styled": "^11.6.0",
+        "@mui/material": "^5.4.1",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
         "eslint-config-airbnb": "^19.0.0",
