--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
+        "react-parallax-tilt": "^1.5.92",
         "react-responsive": "^9.0.0-beta.5",
         "react-ticker": "^1.3.1",
         "react-tilt": "^0.1.4",
