--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.27.0",
+        "js-cookie": "^3.0.1",
         "keen-slider": "^6.6.3",
         "next": "12.0.3",
         "prettier": "^2.4.1",
@@ -41,6 +42,7 @@
         "@emotion/eslint-plugin": "^11.7.0",
         "@next/eslint-plugin-next": "^12.0.8",
         "@types/body-scroll-lock": "^3.1.0",
+        "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.7",
         "@types/react": "17.0.34",
         "@types/styled-components": "^5.1.21",
