--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
+        "react-image-magnify": "^2.7.4",
+        "react-inner-image-zoom": "^3.0.0",
+        "react-medium-image-zoom": "^4.3.5",
         "react-parallax-tilt": "^1.5.92",
         "react-responsive": "^9.0.0-beta.5",
         "react-ticker": "^1.3.1",
@@ -46,6 +49,7 @@
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.7",
         "@types/react": "17.0.34",
+        "@types/react-inner-image-zoom": "^2.0.1",
         "@types/styled-components": "^5.1.21",
         "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
