--- a/package.json
+++ b/package.json
@@ -29,13 +29,11 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
-        "react-image-magnify": "^2.7.4",
-        "react-inner-image-zoom": "^3.0.0",
-        "react-medium-image-zoom": "^4.3.5",
         "react-parallax-tilt": "^1.5.92",
         "react-responsive": "^9.0.0-beta.5",
         "react-ticker": "^1.3.1",
         "react-tilt": "^0.1.4",
+        "react-zoom-pan-pinch": "^2.1.3",
         "sass": "^1.45.1",
         "styled-components": "^5.3.3",
         "swr": "^1.2.2",
@@ -49,7 +47,6 @@
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.7",
         "@types/react": "17.0.34",
-        "@types/react-inner-image-zoom": "^2.0.1",
         "@types/styled-components": "^5.1.21",
         "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
