Added history context to set up the hisory of the previous visited links

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
             "@components/*": ["components/*"],
             "@styles/*": ["styles/*"],
             "@assets/*": ["assets/*"],
-            "@lib/*": ["lib/*"]
+            "@lib/*": ["lib/*"],
+            "@contexts/*": ["contexts/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
