--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
         "@emotion/babel-plugin": "^11.3.0",
         "@emotion/eslint-plugin": "^11.7.0",
         "@next/eslint-plugin-next": "^12.0.8",
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^12.1.4",
         "@types/body-scroll-lock": "^3.1.0",
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.7",
@@ -53,10 +55,12 @@
         "@typescript-eslint/parser": "^5.3.1",
         "autoprefixer": "^10.4.0",
         "babel-plugin-styled-components": "^2.0.2",
+        "cypress": "^9.5.2",
         "eslint": "^7.32.0",
         "eslint-config-next": "^12.0.3",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-styled-components-a11y": "0.0.34",
+        "jest": "^27.5.1",
         "postcss": "^8.3.11",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^2.2.19",
