--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.8.1",
         "@mui/material": "^5.5.0",
+        "@tailwindcss/jit": "^0.1.18",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
         "eslint-config-airbnb": "^19.0.0",
