--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-ripples": "^2.2.1",
         "react-ticker": "^1.3.1",
         "react-tilt": "^0.1.4",
+        "react-use-scroll-direction": "^0.1.0",
         "react-zoom-pan-pinch": "^2.1.3",
         "sass": "^1.45.1",
         "styled-components": "^5.3.3",
