--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
+        "react-intersection-observer": "^8.33.1",
         "react-parallax-tilt": "^1.5.92",
         "react-responsive": "^9.0.0-beta.5",
         "react-ripples": "^2.2.1",
