--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@artsy/fresnel": "^3.4.0",
         "@emotion/css": "^11.5.0",
         "@emotion/react": "^11.8.2",
         "@emotion/server": "^11.4.0",
@@ -26,10 +27,10 @@
         "framer-motion": "^6.2.8",
         "js-cookie": "^3.0.1",
         "keen-slider": "^6.6.3",
-        "next": "12.0.3",
+        "next": "^12.1.4",
         "prettier": "^2.4.1",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
         "react-icons": "^4.3.1",
         "react-intersection-observer": "^8.33.1",
         "react-parallax-tilt": "^1.5.92",
