--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "@tailwindcss/jit": "^0.1.18",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
-        "eslint-config-airbnb": "^19.0.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^16.2.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -29,8 +30,8 @@
         "keen-slider": "^6.6.3",
         "next": "^12.1.4",
         "prettier": "^2.4.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
         "react-intersection-observer": "^8.33.1",
         "react-parallax-tilt": "^1.5.92",
@@ -43,12 +44,13 @@
         "sass": "^1.45.1",
         "styled-components": "^5.3.3",
         "swr": "^1.2.2",
-        "twin.macro": "^2.8.1"
+        "twin.macro": "^2.8.1",
+        "typescript": "^4.6.3"
     },
     "devDependencies": {
         "@emotion/babel-plugin": "^11.3.0",
         "@emotion/eslint-plugin": "^11.7.0",
-        "@next/eslint-plugin-next": "^12.0.8",
+        "@next/eslint-plugin-next": "^12.1.4",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@types/body-scroll-lock": "^3.1.0",
@@ -63,13 +65,12 @@
         "cypress": "^9.5.2",
         "eslint": "^7.32.0",
         "eslint-config-next": "^12.0.3",
-        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-react-hooks": "^4.4.0",
         "eslint-plugin-styled-components-a11y": "0.0.34",
         "jest": "^27.5.1",
         "postcss": "^8.3.11",
         "postcss-import": "^14.0.2",
-        "tailwindcss": "^2.2.19",
-        "typescript": "4.4.4"
+        "tailwindcss": "^2.2.19"
     },
     "babelMacros": {
         "twin": {
