Configuring testing libraries jest,react-testing-library and cypress, fixed tailwindcss error (package not found)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
             "@contexts/*": ["contexts/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": [
+        "next-env.d.ts",
+        "jest.config.js",
+        "next.config.js",
+        "**/*.ts",
+        "**/*.tsx"
+    ],
     "exclude": ["node_modules"]
 }
