--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
         "dev": "next dev -p 1000",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "cypress": "cypress open",
+        "test": "jest --watch"
     },
     "dependencies": {
         "@artsy/fresnel": "^3.4.0",
@@ -15,6 +17,7 @@
         "@emotion/styled": "^11.8.1",
         "@mui/material": "^5.5.0",
         "@tailwindcss/jit": "^0.1.18",
+        "@testing-library/react": "^13.0.0",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
         "eslint-config-airbnb": "^19.0.4",
@@ -29,9 +32,9 @@
         "js-cookie": "^3.0.1",
         "keen-slider": "^6.6.3",
         "next": "^12.1.4",
-        "prettier": "^2.4.1",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
+        "prettier": "^2.6.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "react-intersection-observer": "^8.33.1",
         "react-parallax-tilt": "^1.5.92",
@@ -44,6 +47,7 @@
         "sass": "^1.45.1",
         "styled-components": "^5.3.3",
         "swr": "^1.2.2",
+        "tailwindcss": "^3.0.23",
         "twin.macro": "^2.8.1",
         "typescript": "^4.6.3"
     },
@@ -52,7 +56,6 @@
         "@emotion/eslint-plugin": "^11.7.0",
         "@next/eslint-plugin-next": "^12.1.4",
         "@testing-library/jest-dom": "^5.16.3",
-        "@testing-library/react": "^12.1.4",
         "@types/body-scroll-lock": "^3.1.0",
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.7",
@@ -63,14 +66,13 @@
         "autoprefixer": "^10.4.0",
         "babel-plugin-styled-components": "^2.0.2",
         "cypress": "^9.5.2",
-        "eslint": "^7.32.0",
+        "eslint": "^8.12.0",
         "eslint-config-next": "^12.0.3",
         "eslint-plugin-react-hooks": "^4.4.0",
         "eslint-plugin-styled-components-a11y": "0.0.34",
         "jest": "^27.5.1",
         "postcss": "^8.3.11",
-        "postcss-import": "^14.0.2",
-        "tailwindcss": "^2.2.19"
+        "postcss-import": "^14.0.2"
     },
     "babelMacros": {
         "twin": {
