--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "devDependencies": {
         "@emotion/babel-plugin": "^11.3.0",
         "@emotion/eslint-plugin": "^11.7.0",
+        "@faker-js/faker": "^6.1.2",
         "@next/eslint-plugin-next": "^12.1.4",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.5",
