--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "next lint",
         "cypress": "cypress open",
         "test": "jest --watch --verbose",
+        "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
         "preinstall": "npx npm-force-resolutions"
     },
     "dependencies": {
