--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
         "next-env.d.ts",
         "jest.config.js",
         "next.config.js",
-        "__mocks__/style-mock.js",
+        "__mocks__/fileMock.js",
         "**/*.ts",
         "**/*.tsx"
     ],
