Added custom render that exports @testing-library/react, i've included all the contexts in order to test certain components that require the values of those contexts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
             "@styles/*": ["styles/*"],
             "@assets/*": ["assets/*"],
             "@lib/*": ["lib/*"],
-            "@contexts/*": ["contexts/*"]
+            "@contexts/*": ["contexts/*"],
+            "@tests/*": ["tests/*"]
         }
     },
     "include": [
