--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
             "@assets/*": ["assets/*"],
             "@lib/*": ["lib/*"],
             "@contexts/*": ["contexts/*"],
-            "@tests/*": ["tests/*"]
+            "@tests/*": ["tests/*"],
+            "@hooks": ["hooks"],
+            "@hooks/*": ["hooks/*"]
         }
     },
     "include": [
