--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@next/eslint-plugin-next": "^12.1.4",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.5",
+        "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.0",
         "@types/body-scroll-lock": "^3.1.0",
         "@types/jest-axe": "^3.5.3",
