Mocked all the graphql mutations and queries related to checkout using msw. Not really needed in this case since it doesn't change the display of the component but It could be usefull when testing cart

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
             "@contexts/*": ["contexts/*"],
             "@tests/*": ["tests/*"],
             "@hooks": ["hooks"],
-            "@hooks/*": ["hooks/*"]
+            "@hooks/*": ["hooks/*"],
+            "@mocks": ["__mocks__"],
+            "@mocks/*": ["__mocks__/*"]
         }
     },
     "include": [
