--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@emotion/react": "^11.8.2",
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.6.2",
         "@mui/material": "^5.5.0",
         "@tailwindcss/jit": "^0.1.18",
         "body-scroll-lock": "^4.0.0-beta.0",
