--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mui/icons-material": "^5.6.2",
         "@mui/material": "^5.5.0",
         "@tailwindcss/jit": "^0.1.18",
+        "@types/react-paginate": "^7.1.1",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
         "eslint-config-airbnb-typescript": "^16.2.0",
@@ -39,6 +40,7 @@
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "react-intersection-observer": "^8.33.1",
+        "react-paginate": "^8.1.3",
         "react-parallax-tilt": "^1.6.6",
         "react-responsive": "^9.0.0-beta.5",
         "react-ripples": "^2.2.1",
