--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "prettier": "^2.6.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-hook-form": "^7.31.2",
         "react-icons": "^4.3.1",
         "react-intersection-observer": "^8.33.1",
         "react-paginate": "^8.1.3",
