--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@emotion/react": "^11.8.2",
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.8.1",
+        "@hookform/resolvers": "^2.8.10",
         "@mui/icons-material": "^5.6.2",
         "@mui/material": "^5.5.0",
         "@tailwindcss/jit": "^0.1.18",
@@ -54,7 +55,8 @@
         "tailwindcss": "^2.2.19",
         "twin.macro": "^2.8.1",
         "typescript": "^4.6.3",
-        "whatwg-fetch": "^3.6.2"
+        "whatwg-fetch": "^3.6.2",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@emotion/babel-plugin": "^11.3.0",
