--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "tailwindcss": "^2.2.19",
         "twin.macro": "^2.8.1",
         "typescript": "^4.6.3",
+        "validator": "^13.7.0",
         "whatwg-fetch": "^3.6.2",
         "yup": "^0.32.11"
     },
@@ -74,6 +75,7 @@
         "@types/node": "16.11.7",
         "@types/react": "17.0.30",
         "@types/styled-components": "^5.1.21",
+        "@types/validator": "^13.7.2",
         "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
         "autoprefixer": "^10.4.0",
