--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.server
 *.env
+config.env
 
 # vercel
 .vercel
