--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "framer-motion": "^6.2.8",
         "js-cookie": "^3.0.1",
         "keen-slider": "^6.6.3",
+        "mongoose": "^6.3.4",
         "next": "^12.1.4",
         "npm-force-resolutions": "0.0.10",
         "prettier": "^2.6.2",
