--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@mui/material": "^5.5.0",
         "@tailwindcss/jit": "^0.1.18",
         "@types/react-paginate": "^7.1.1",
+        "axios": "^0.27.2",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
         "eslint-config-airbnb-typescript": "^16.2.0",
