--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "plugin:styled-components-a11y/strict",
         "plugin:@next/next/recommended",
         "plugin:react/jsx-runtime",
+        "plugin:styled-components-a11y/recommended",
         "prettier"
     ],
     "plugins": [
