--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "axios": "^0.27.2",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
+        "embla-carousel-react": "^7.0.0",
         "eslint-config-airbnb-typescript": "^16.2.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.3",
@@ -40,6 +41,7 @@
         "npm-force-resolutions": "0.0.10",
         "prettier": "^2.6.2",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.5.0",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.31.2",
         "react-icons": "^4.3.1",
