--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
         "react-intersection-observer": "^8.33.1",
         "react-paginate": "^8.1.3",
         "react-parallax-tilt": "^1.6.6",
+        "react-phone-input-2": "^2.15.1",
+        "react-phone-number-input": "^3.2.8",
         "react-responsive": "^9.0.0-beta.5",
         "react-ripples": "^2.2.1",
         "react-ticker": "^1.3.1",
