Managed to implement a HOC auth function for protected routes. Customer is stored in the fallabck at request time which allows me to cache it with SWR

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
             "@assets/*": ["assets/*"],
             "@lib/*": ["lib/*"],
             "@contexts/*": ["contexts/*"],
+            "@auth/*": ["auth/*"],
             "@tests/*": ["tests/*"],
             "@hooks": ["hooks"],
             "@hooks/*": ["hooks/*"],
