--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "axios": "^0.27.2",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
+        "currency-symbol-map": "^5.1.0",
+        "dateformat": "^5.0.3",
         "embla-carousel-react": "^7.0.0",
         "eslint-config-airbnb-typescript": "^16.2.0",
         "eslint-config-prettier": "^8.3.0",
@@ -76,6 +78,7 @@
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.0",
         "@types/body-scroll-lock": "^3.1.0",
+        "@types/dateformat": "^5.0.0",
         "@types/jest-axe": "^3.5.3",
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.7",
