--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@mui/material": "^5.5.0",
         "@tailwindcss/jit": "^0.1.18",
         "@types/react-paginate": "^7.1.1",
+        "awesome-phonenumber": "^3.3.0",
         "axios": "^0.27.2",
         "body-scroll-lock": "^4.0.0-beta.0",
         "classnames": "^2.3.1",
@@ -38,12 +39,14 @@
         "framer-motion": "^6.2.8",
         "js-cookie": "^3.0.1",
         "keen-slider": "^6.6.3",
+        "libphonenumber-js": "^1.10.13",
         "mongoose": "^6.3.4",
         "next": "^12.1.4",
         "npm-force-resolutions": "0.0.10",
         "prettier": "^2.6.2",
         "react": "^17.0.2",
         "react-bootstrap": "^2.5.0",
+        "react-country-region-selector": "^3.6.1",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.31.2",
         "react-icons": "^4.3.1",
