--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
         "tailwindcss": "^2.2.19",
         "twin.macro": "^2.8.1",
         "typescript": "^4.6.3",
+        "underscore": "^1.13.4",
+        "uuid": "^9.0.0",
         "validator": "^13.7.0",
         "whatwg-fetch": "^3.6.2",
         "yup": "^0.32.11"
@@ -87,6 +89,8 @@
         "@types/node": "16.11.7",
         "@types/react": "17.0.30",
         "@types/styled-components": "^5.1.21",
+        "@types/underscore": "^1.11.4",
+        "@types/uuid": "^8.3.4",
         "@types/validator": "^13.7.2",
         "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
