--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,8 @@
         "**/*.ts",
         "**/*.tsx",
         "__mocks__/framer-motion.js",
-        "**/*.config.js"
+        "**/*.config.js",
+        "./pages/_document.js"
     ],
     "exclude": ["node_modules"]
 }
