--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-use-scroll-direction": "^0.1.0",
         "react-zoom-pan-pinch": "^2.1.3",
         "sass": "^1.45.1",
+        "sharp": "^0.31.0",
         "styled-components": "^5.3.3",
         "swr": "^1.2.2",
         "tailwindcss": "^2.2.19",
