--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "@testing-library/user-event": "^14.1.0",
         "@types/body-scroll-lock": "^3.1.0",
         "@types/dateformat": "^5.0.0",
+        "@types/jest": "^29.1.2",
         "@types/jest-axe": "^3.5.3",
         "@types/js-cookie": "^3.0.1",
         "@types/node": "16.11.7",
@@ -114,7 +115,8 @@
         "msw": "^0.39.2",
         "postcss": "^8.4.12",
         "postcss-import": "^14.0.2",
-        "test-data-bot": "^0.8.0"
+        "test-data-bot": "^0.8.0",
+        "ts-jest": "^29.0.3"
     },
     "babelMacros": {
         "twin": {
