Adding is-ci to our test script command in package.json in order to detect whether the app is running in a continuous integration server

--- a/package.json
+++ b/package.json
@@ -1,134 +1,136 @@
 {
-  "name": "hiempsal",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 1000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "cypress": "cypress open",
-    "test": "jest --watch --verbose",
-    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "preinstall": "npx npm-force-resolutions",
-    "cy:run": "cypress run"
-  },
-  "dependencies": {
-    "@artsy/fresnel": "^3.4.0",
-    "@emotion/css": "^11.5.0",
-    "@emotion/react": "^11.8.2",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
-    "@hookform/resolvers": "^2.8.10",
-    "@jackfranklin/test-data-bot": "^2.0.0",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.5.0",
-    "@tailwindcss/jit": "^0.1.18",
-    "@types/react-paginate": "^7.1.1",
-    "awesome-phonenumber": "^3.3.0",
-    "axios": "^0.27.2",
-    "body-scroll-lock": "^4.0.0-beta.0",
-    "classnames": "^2.3.1",
-    "currency-symbol-map": "^5.1.0",
-    "dateformat": "^5.0.3",
-    "embla-carousel-react": "^7.0.0",
-    "eslint-config-airbnb-typescript": "^16.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
-    "framer-motion": "^6.2.8",
-    "is-ci": "^3.0.1",
-    "js-cookie": "^3.0.1",
-    "keen-slider": "^6.6.3",
-    "libphonenumber-js": "^1.10.13",
-    "mongoose": "^6.3.4",
-    "next": "^12.1.4",
-    "npm-force-resolutions": "0.0.10",
-    "prettier": "^2.6.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.5.0",
-    "react-country-region-selector": "^3.6.1",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.31.2",
-    "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.33.1",
-    "react-paginate": "^8.1.3",
-    "react-parallax-tilt": "^1.6.6",
-    "react-phone-input-2": "^2.15.1",
-    "react-phone-number-input": "^3.2.8",
-    "react-responsive": "^9.0.0-beta.5",
-    "react-ripples": "^2.2.1",
-    "react-ticker": "^1.3.1",
-    "react-use-scroll-direction": "^0.1.0",
-    "react-zoom-pan-pinch": "^2.1.3",
-    "sass": "^1.45.1",
-    "sharp": "^0.31.0",
-    "styled-components": "^5.3.3",
-    "swr": "^1.2.2",
-    "tailwindcss": "^2.2.19",
-    "twin.macro": "^2.8.1",
-    "typescript": "^4.6.3",
-    "underscore": "^1.13.4",
-    "uuid": "^9.0.0",
-    "validator": "^13.7.0",
-    "whatwg-fetch": "^3.6.2",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@emotion/babel-plugin": "^11.3.0",
-    "@emotion/eslint-plugin": "^11.7.0",
-    "@emotion/jest": "^11.9.1",
-    "@faker-js/faker": "^6.1.2",
-    "@next/eslint-plugin-next": "^12.1.4",
-    "@testing-library/cypress": "^8.0.3",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^14.1.0",
-    "@types/body-scroll-lock": "^3.1.0",
-    "@types/dateformat": "^5.0.0",
-    "@types/jest": "^29.1.2",
-    "@types/jest-axe": "^3.5.3",
-    "@types/js-cookie": "^3.0.1",
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.30",
-    "@types/styled-components": "^5.1.21",
-    "@types/underscore": "^1.11.4",
-    "@types/uuid": "^8.3.4",
-    "@types/validator": "^13.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "autoprefixer": "^10.4.0",
-    "babel-plugin-styled-components": "^2.0.2",
-    "cypress": "^10.9.0",
-    "cypress-testing-library": "^4.0.0",
-    "eslint": "^8.12.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "^12.0.3",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-styled-components-a11y": "^0.0.34",
-    "jest": "^27.5.1",
-    "jest-axe": "^6.0.0",
-    "jest-watch-select-projects": "^2.0.0",
-    "jest-watch-typeahead": "^1.0.0",
-    "msw": "^0.39.2",
-    "postcss": "^8.4.12",
-    "postcss-import": "^14.0.2",
-    "test-data-bot": "^0.8.0",
-    "ts-jest": "^29.0.3"
-  },
-  "babelMacros": {
-    "twin": {
-      "config": "./tailwind.config.js",
-      "preset": "styled-components"
+    "name": "hiempsal",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 1000",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "cypress": "cypress open",
+        "test": "is-ci \"test:ci\" \"test:watch\"",
+        "test:watch": "jest --watch --verbose",
+        "test:ci": "jest --watchAll --verbose",
+        "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
+        "preinstall": "npx npm-force-resolutions",
+        "cy:run": "cypress run"
+    },
+    "dependencies": {
+        "@artsy/fresnel": "^3.4.0",
+        "@emotion/css": "^11.5.0",
+        "@emotion/react": "^11.8.2",
+        "@emotion/server": "^11.4.0",
+        "@emotion/styled": "^11.8.1",
+        "@hookform/resolvers": "^2.8.10",
+        "@jackfranklin/test-data-bot": "^2.0.0",
+        "@mui/icons-material": "^5.6.2",
+        "@mui/material": "^5.5.0",
+        "@tailwindcss/jit": "^0.1.18",
+        "@types/react-paginate": "^7.1.1",
+        "awesome-phonenumber": "^3.3.0",
+        "axios": "^0.27.2",
+        "body-scroll-lock": "^4.0.0-beta.0",
+        "classnames": "^2.3.1",
+        "currency-symbol-map": "^5.1.0",
+        "dateformat": "^5.0.3",
+        "embla-carousel-react": "^7.0.0",
+        "eslint-config-airbnb-typescript": "^16.2.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.27.0",
+        "framer-motion": "^6.2.8",
+        "is-ci": "^3.0.1",
+        "js-cookie": "^3.0.1",
+        "keen-slider": "^6.6.3",
+        "libphonenumber-js": "^1.10.13",
+        "mongoose": "^6.3.4",
+        "next": "^12.1.4",
+        "npm-force-resolutions": "0.0.10",
+        "prettier": "^2.6.2",
+        "react": "^17.0.2",
+        "react-bootstrap": "^2.5.0",
+        "react-country-region-selector": "^3.6.1",
+        "react-dom": "^17.0.2",
+        "react-hook-form": "^7.31.2",
+        "react-icons": "^4.3.1",
+        "react-intersection-observer": "^8.33.1",
+        "react-paginate": "^8.1.3",
+        "react-parallax-tilt": "^1.6.6",
+        "react-phone-input-2": "^2.15.1",
+        "react-phone-number-input": "^3.2.8",
+        "react-responsive": "^9.0.0-beta.5",
+        "react-ripples": "^2.2.1",
+        "react-ticker": "^1.3.1",
+        "react-use-scroll-direction": "^0.1.0",
+        "react-zoom-pan-pinch": "^2.1.3",
+        "sass": "^1.45.1",
+        "sharp": "^0.31.0",
+        "styled-components": "^5.3.3",
+        "swr": "^1.2.2",
+        "tailwindcss": "^2.2.19",
+        "twin.macro": "^2.8.1",
+        "typescript": "^4.6.3",
+        "underscore": "^1.13.4",
+        "uuid": "^9.0.0",
+        "validator": "^13.7.0",
+        "whatwg-fetch": "^3.6.2",
+        "yup": "^0.32.11"
+    },
+    "devDependencies": {
+        "@emotion/babel-plugin": "^11.3.0",
+        "@emotion/eslint-plugin": "^11.7.0",
+        "@emotion/jest": "^11.9.1",
+        "@faker-js/faker": "^6.1.2",
+        "@next/eslint-plugin-next": "^12.1.4",
+        "@testing-library/cypress": "^8.0.3",
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^12.1.5",
+        "@testing-library/react-hooks": "^8.0.0",
+        "@testing-library/user-event": "^14.1.0",
+        "@types/body-scroll-lock": "^3.1.0",
+        "@types/dateformat": "^5.0.0",
+        "@types/jest": "^29.1.2",
+        "@types/jest-axe": "^3.5.3",
+        "@types/js-cookie": "^3.0.1",
+        "@types/node": "16.11.7",
+        "@types/react": "17.0.30",
+        "@types/styled-components": "^5.1.21",
+        "@types/underscore": "^1.11.4",
+        "@types/uuid": "^8.3.4",
+        "@types/validator": "^13.7.2",
+        "@typescript-eslint/eslint-plugin": "^5.3.1",
+        "@typescript-eslint/parser": "^5.3.1",
+        "autoprefixer": "^10.4.0",
+        "babel-plugin-styled-components": "^2.0.2",
+        "cypress": "^10.9.0",
+        "cypress-testing-library": "^4.0.0",
+        "eslint": "^8.12.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-next": "^12.0.3",
+        "eslint-plugin-react-hooks": "^4.4.0",
+        "eslint-plugin-styled-components-a11y": "^0.0.34",
+        "jest": "^27.5.1",
+        "jest-axe": "^6.0.0",
+        "jest-watch-select-projects": "^2.0.0",
+        "jest-watch-typeahead": "^1.0.0",
+        "msw": "^0.39.2",
+        "postcss": "^8.4.12",
+        "postcss-import": "^14.0.2",
+        "test-data-bot": "^0.8.0",
+        "ts-jest": "^29.0.3"
+    },
+    "babelMacros": {
+        "twin": {
+            "config": "./tailwind.config.js",
+            "preset": "styled-components"
+        }
+    },
+    "resolutions": {
+        "@types/react": "17.0.30"
+    },
+    "msw": {
+        "workerDirectory": "public"
     }
-  },
-  "resolutions": {
-    "@types/react": "17.0.30"
-  },
-  "msw": {
-    "workerDirectory": "public"
-  }
 }
