--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "cypress": "cypress open",
         "test": "is-ci \"test:ci\" \"test:watch\"",
         "test:watch": "jest --watch --verbose",
-        "test:ci": "jest --watchAll --verbose",
+        "test:ci": "jest --coverage",
         "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
         "preinstall": "npx npm-force-resolutions",
         "cy:run": "cypress run"
