Trying to debugg circli process hang with --forceExit flag

--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "test": "(is-ci && npm run test:coverage) || npm run test:watch",
+        "test": "(is-ci && npm run test:coverage --forceExit) || npm run test:watch",
         "test:coverage": "jest --coverage",
         "test:watch": "jest --watch --verbose",
         "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
         "preinstall": "npx npm-force-resolutions",
         "cy:open": "cypress open",
         "cy:run": "cypress run",
-        "test:e2e": "(is-ci && npm run test:e2e:run) || npm run test:e2e:dev",
+        "test:e2e": "(is-ci && npm run test:e2e:run ) || npm run test:e2e:dev",
         "test:e2e:run": "start-server-and-test start http://localhost:8080 cy:run",
         "test:e2e:dev": "start-server-and-test dev http://localhost:8080 cy:open"
     },
