--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "lint": "next lint",
         "test": "(is-ci && npm run test:coverage --forceExit) || npm run test:watch",
         "test:coverage": "jest --coverage",
-        "test:watch": "jest --watch --verbose",
+        "test:watch": "jest --runInBand --watch --verbose",
         "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
         "preinstall": "npx npm-force-resolutions",
         "cy:open": "cypress open",
@@ -39,6 +39,7 @@
         "eslint-config-airbnb-typescript": "^16.2.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jest": "^27.1.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.0.0",
@@ -87,6 +88,8 @@
         "@emotion/jest": "^11.9.1",
         "@faker-js/faker": "^6.1.2",
         "@next/eslint-plugin-next": "^12.1.4",
+        "@swc/core": "^1.3.11",
+        "@swc/jest": "^0.2.23",
         "@testing-library/cypress": "^8.0.3",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.5",
@@ -109,7 +112,7 @@
         "babel-plugin-styled-components": "^2.0.2",
         "cypress": "^10.9.0",
         "cypress-testing-library": "^4.0.0",
-        "eslint": "^8.12.0",
+        "eslint": "^8.26.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-next": "^12.0.3",
         "eslint-plugin-react-hooks": "^4.4.0",
